--- a/index.html
+++ b/index.html
@@ -1,1 +1,143 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Borys Kałmucki | Official Site</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --gold: #d4af37;
+            --dark: #0a0a0a;
+            --gray: #1a1a1a;
+            --text: #ffffff;
+        }
 
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: var(--dark);
+            color: var(--text);
+            font-family: 'Poppins', sans-serif;
+            overflow-x: hidden;
+        }
+
+        /* Tło z nutami */
+        .music-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            opacity: 0.1;
+            pointer-events: none;
+        }
+
+        .container {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .prestige-box {
+            border: 1px solid var(--gold);
+            padding: 60px;
+            background: rgba(26, 26, 26, 0.8);
+            backdrop-filter: blur(10px);
+            box-shadow: 0 0 50px rgba(212, 175, 55, 0.1);
+            border-radius: 2px;
+            position: relative;
+        }
+
+        h1 {
+            font-family: 'Playfair Display', serif;
+            font-size: 4rem;
+            margin: 0;
+            letter-spacing: 5px;
+            text-transform: uppercase;
+            background: linear-gradient(to right, #fff, var(--gold), #fff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .subtitle {
+            font-size: 1.2rem;
+            color: var(--gold);
+            letter-spacing: 8px;
+            margin-bottom: 40px;
+            text-transform: uppercase;
+        }
+
+        .email-link {
+            color: #888;
+            text-decoration: none;
+            font-weight: 300;
+            transition: 0.3s;
+            border-bottom: 1px solid transparent;
+        }
+
+        .email-link:hover {
+            color: var(--gold);
+            border-bottom: 1px solid var(--gold);
+        }
+
+        .notes-icon {
+            font-size: 2rem;
+            margin-bottom: 20px;
+            color: var(--gold);
+            animation: float 3s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+        }
+
+        .footer {
+            position: absolute;
+            bottom: 30px;
+            font-size: 0.8rem;
+            letter-spacing: 2px;
+            opacity: 0.5;
+        }
+
+        /* Responsywność */
+        @media (max-width: 768px) {
+            h1 { font-size: 2.5rem; }
+            .prestige-box { padding: 30px; }
+        }
+    </style>
+</head>
+<body>
+
+    <div class="music-bg">
+        <svg width="100%" height="100%">
+            <text x="10%" y="20%" font-size="50" fill="white">♪</text>
+            <text x="80%" y="15%" font-size="40" fill="white">♫</text>
+            <text x="15%" y="80%" font-size="60" fill="white">∮</text>
+            <text x="85%" y="75%" font-size="45" fill="white">♩</text>
+        </svg>
+    </div>
+
+    <div class="container">
+        <div class="prestige-box">
+            <div class="notes-icon">♩ ♪ ♫ ♬</div>
+            <h1>Borys Kałmucki</h1>
+            <div class="subtitle">Artysta & Muzyk</div>
+            
+            <p>Kontakt biznesowy:</p>
+            <a href="mailto:bokamusics@gmail.com" class="email-link">bokamusics@gmail.com</a>
+        </div>
+
+        <div class="footer">
+            EST. 2024 | PRESTIGE SOUNDS
+        </div>
+    </div>
+
+</body>
+</html>
